--- a/aist_routines/config/ur5e_config.yaml
+++ b/aist_routines/config/ur5e_config.yaml
@@ -1,13 +1,13 @@
 grippers:
   c_bot:
-    class: Robotiq85Gripper
+    type: Robotiq85Gripper
     args:
       prefix: c_bot_
       force: 5.0
       velocity: 0.1
       timeout: 6.0
   d_bot:
-    class: Robotiq85Gripper
+    type: Robotiq85Gripper
     args:
       prefix: d_bot_
       force: 5.0
