--- a/aist_ftsensor/config/ftsensor.yaml
+++ b/aist_ftsensor/config/ftsensor.yaml
@@ -1,21 +1,13 @@
-end_effector: 0.2
-gravity: 9.8
+effector_mass: 0.2
 f_offset:
-    - 11.0
-    - 12.0
-    - 13.0
+    - -19.0
+    - -4.0
+    - 3.0
 m_offset:
-    - 21.0
-    - 22.0
-    - 23.0
+    - 0.0
+    - 0.0
+    - 0.0
 r_offset:
-    - 101.0
-    - 102.0
-    - 103.0
-    - 201.0
-    - 202.0
-    - 203.0
-    - 301.0
-    - 302.0
-    - 303.0
-
+    - 0.0
+    - 0.0
+    - 0.0
