[aist_ftsensor] Moved ft300.cpp into ftsensor.cpp.

--- a/aist_ftsensor/CMakeLists.txt
+++ b/aist_ftsensor/CMakeLists.txt
@@ -154,7 +154,7 @@ include_directories(
 
 add_definitions(-D__MY_DEBUG__=2)
 
-add_executable(${PROJECT_NAME} src/ftsensor.cpp src/ft300.cpp src/main.cpp)
+add_executable(${PROJECT_NAME} src/ftsensor.cpp src/main.cpp)
 
 target_link_libraries(${PROJECT_NAME}
   ${catkin_LIBRARIES}
@@ -163,7 +163,7 @@ target_link_libraries(${PROJECT_NAME}
 )
 
 ## only __MY_DEBUG__=2
-add_executable(my_debug src/ftsensor.cpp src/ft300.cpp src/my_debug.cpp)
+add_executable(my_debug src/ftsensor.cpp src/my_debug.cpp)
 target_link_libraries(my_debug
   ${catkin_LIBRARIES}
   ${roscpp_LIBRARIES}
