--- a/aist_ftsensor/config/ftsensor.yaml
+++ b/aist_ftsensor/config/ftsensor.yaml
@@ -1,13 +1,4 @@
 effector_mass: 0.2
-f_offset:
-    - -19.0
-    - -4.0
-    - 3.0
-m_offset:
-    - 0.0
-    - 0.0
-    - 0.0
-r_offset:
-    - 0.0
-    - 0.0
-    - 0.0
+force_offset: [-19.0 -4.0 3.0]
+torque_offset: [0.0 0.0 0.0]
+mass_center: [0.0 0.0 0.0]
