--- a/aist_routines/config/pgrp_config.yaml
+++ b/aist_routines/config/pgrp_config.yaml
@@ -22,7 +22,7 @@ cameras:
     args:
       name: a_phoxi_m_camera
   a_bot_camera:
-    type: RealsenseCamera
+    type: DepthCamera
     args:
       name: a_bot_camera
 
