--- a/ceatec_moveit_config/package.xml
+++ b/ceatec_moveit_config/package.xml
@@ -1,34 +1,40 @@
 <package>
 
   <name>ceatec_moveit_config</name>
-  <version>0.3.0</version>
+  <version>0.7.15</version>
   <description>
-     An automatically generated package with all the configuration and launch files for using the ceatec_base_scene_with_fetch with the MoveIt! Motion Planning Framework
+     An automatically generated package with all the configuration and launch files for using the fetch_urdf with the MoveIt Motion Planning Framework
   </description>
-  <author email="t.ueshiba@aist.go.jp">Toshio UESHIBA</author>
-  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>
+  <author email="assistant@moveit.ros.org">MoveIt Setup Assistant</author>
+
+  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
+  <maintainer email="amoriarty@fetchrobotics.com">Alex Moriarty</maintainer>
 
   <license>BSD</license>
+  <url>http://ros.org/wiki/fetch_moveit_config</url>
 
   <url type="website">http://moveit.ros.org/</url>
-  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
-  <url type="repository">https://github.com/ros-planning/moveit</url>
+  <url type="bugtracker">https://github.com/ros-planning/moveit_setup_assistant/issues</url>
+  <url type="repository">https://github.com/ros-planning/moveit_setup_assistant</url>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>moveit_ros_move_group</run_depend>
+  <build_depend>fetch_description</build_depend>
+
+  <run_depend>fetch_description</run_depend>
+  <run_depend>fetch_ikfast_plugin</run_depend>
+  <run_depend>joint_state_publisher</run_depend>
   <run_depend>moveit_fake_controller_manager</run_depend>
   <run_depend>moveit_kinematics</run_depend>
+  <run_depend>moveit_ros_move_group</run_depend>
   <run_depend>moveit_planners_ompl</run_depend>
+  <run_depend>moveit_python</run_depend>
   <run_depend>moveit_ros_visualization</run_depend>
-  <run_depend>moveit_setup_assistant</run_depend>
-  <run_depend>joint_state_publisher</run_depend>
+  <run_depend>moveit_simple_controller_manager</run_depend>
   <run_depend>robot_state_publisher</run_depend>
+  <run_depend>rospy</run_depend>
   <run_depend>xacro</run_depend>
-  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
-  <!-- <run_depend>warehouse_ros_mongo</run_depend> -->
-  <build_depend>aist_scene_description</build_depend>
-  <run_depend>aist_scene_description</run_depend>
 
-
+  <test_depend>rostest</test_depend>
+  
 </package>
