Improved interoperability between UR robots and Fetch.

--- a/aist_routines/config/ceatec_config.yaml
+++ b/aist_routines/config/ceatec_config.yaml
@@ -15,3 +15,6 @@ cameras:
     type: DepthCamera
     args:
       name: head_camera
+
+moveit_pose_reference_frame: "base_link"
+moveit_eef_step: 0.01
