--- a/ur5e_moveit_config/config/kinematics.yaml
+++ b/ur5e_moveit_config/config/kinematics.yaml
@@ -1,1 +1,10 @@
-{}
+c_bot:
+  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+  kinematics_solver_search_resolution: 0.005
+  kinematics_solver_timeout: 0.005
+  kinematics_solver_attempts: 3
+d_bot:
+  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+  kinematics_solver_search_resolution: 0.005
+  kinematics_solver_timeout: 0.005
+  kinematics_solver_attempts: 3{}
