--- a/aist_routines/config/mocap_config.yaml
+++ b/aist_routines/config/mocap_config.yaml
@@ -3,9 +3,9 @@ groups:
 
 grippers:
   c_bot:
-    type: Robotiq85Gripper
+    type: RobotiqGripper
     args:
       prefix: c_bot_
+      product: "85"
       force: 5.0
       velocity: 0.1
-      timeout: 6.0
