--- a/aist_routines/config/pgrp_config.yaml
+++ b/aist_routines/config/pgrp_config.yaml
@@ -8,13 +8,11 @@ grippers:
     type: PrecisionGripper
     args:
       prefix: a_bot_
-      timeout: 3.0
   b_bot:
     type: SuctionGripper
     args:
       prefix: b_bot_single_
       eject: false
-      timeout: 2.0
 
 cameras:
   a_phoxi_m_camera:
@@ -22,7 +20,7 @@ cameras:
     args:
       name: a_phoxi_m_camera
   a_bot_camera:
-    type: RealsenseCamera
+    type: DepthCamera
     args:
       name: a_bot_camera
 
