Trying to launch two robots but yet succeeded.

--- a/dtorobo_moveit_config/config/fake_controllers.yaml
+++ b/dtorobo_moveit_config/config/fake_controllers.yaml
@@ -1,17 +1,39 @@
 controller_list:
-  - name: fake_a_torobo_controller
+  - name: fake_a_torobo_arm_controller
     joints:
-      - a_torobo/arm/joint_1
-      - a_torobo/arm/joint_2
-      - a_torobo/arm/joint_3
-      - a_torobo/arm/joint_4
-      - a_torobo/arm/joint_5
-      - a_torobo/arm/joint_6
-  - name: fake_b_torobo_controller
+      - a_torobo_arm/joint_1
+      - a_torobo_arm/joint_2
+      - a_torobo_arm/joint_3
+      - a_torobo_arm/joint_4
+      - a_torobo_arm/joint_5
+      - a_torobo_arm/joint_6
+      - a_torobo_arm/joint_7
+  - name: fake_b_torobo_arm_controller
     joints:
-      - b_torobo/arm/joint_1
-      - b_torobo/arm/joint_2
-      - b_torobo/arm/joint_3
-      - b_torobo/arm/joint_4
-      - b_torobo/arm/joint_5
-      - b_torobo/arm/joint_6
+      - b_torobo_arm/joint_1
+      - b_torobo_arm/joint_2
+      - b_torobo_arm/joint_3
+      - b_torobo_arm/joint_4
+      - b_torobo_arm/joint_5
+      - b_torobo_arm/joint_6
+      - b_torobo_arm/joint_7
+  - name: fake_all_torobos_arm_controller
+    joints:
+      - a_torobo_arm/joint_1
+      - a_torobo_arm/joint_2
+      - a_torobo_arm/joint_3
+      - a_torobo_arm/joint_4
+      - a_torobo_arm/joint_5
+      - a_torobo_arm/joint_6
+      - a_torobo_arm/joint_7
+      - b_torobo_arm/joint_1
+      - b_torobo_arm/joint_2
+      - b_torobo_arm/joint_3
+      - b_torobo_arm/joint_4
+      - b_torobo_arm/joint_5
+      - b_torobo_arm/joint_6
+      - b_torobo_arm/joint_7
+  - name: fake_a_torobo_gripper_controller
+    joint: a_torobo_gripper/finger_joint
+  - name: fake_b_torobo_gripper_controller
+    joint: b_torobo_gripper/finger_joint
