--- a/dtorobo_moveit_config/config/kinematics.yaml
+++ b/dtorobo_moveit_config/config/kinematics.yaml
@@ -1,4 +1,10 @@
-kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
-kinematics_solver_search_resolution: 0.005
-kinematics_solver_timeout: 0.005
-kinematics_solver_attempts: 3
+a_torobo:
+  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+  kinematics_solver_search_resolution: 0.005
+  kinematics_solver_timeout: 0.005
+  kinematics_solver_attempts: 3
+b_torobo:
+  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+  kinematics_solver_search_resolution: 0.005
+  kinematics_solver_timeout: 0.005
+  kinematics_solver_attempts: 3
