--- a/aist_routines/config/ur5e_config.yaml
+++ b/aist_routines/config/ur5e_config.yaml
@@ -6,6 +6,7 @@ grippers:
       product: "85"
       force: 5.0
       velocity: 0.1
+      timeout: 6.0
   d_bot:
     type: RobotiqGripper
     args:
@@ -13,3 +14,4 @@ grippers:
       product: hande
       force: 5.0
       velocity: 0.1
+      timeout: 6.0
