--- a/aist_routines/config/ceatec_config.yaml
+++ b/aist_routines/config/ceatec_config.yaml
@@ -1,8 +1,14 @@
 grippers:
   arm:
-    type: FetchGripper
+    type: GenericGripper
     args:
-      prefix: ""
+      name: gripper
+      action_ns: gripper_controller/gripper_action
+      base_link: wrist_roll_link
+      tip_link: gripper_link
+      timeout: 10.0
+      min_gap: 0.0
+      max_gap: 0.1
       max_effort: 5.0
 
 cameras:
