--- a/aist_routines/config/ceatec_config.yaml
+++ b/aist_routines/config/ceatec_config.yaml
@@ -9,13 +9,17 @@ grippers:
       timeout: 10.0
       min_gap: 0.0
       max_gap: 0.1
-      max_effort: 5.0
+      max_effort: 0.0
 
 cameras:
   head_camera:
     type: DepthCamera
     args:
       name: head_camera
+      camera_info_topic: depth/camera_info
+      image_topic: rgb/image_rect_color
+      pointcloud_topic: depth/point
+      depth_topic: depth/image_rect
 
 moveit_pose_reference_frame: "base_link"
 moveit_eef_step: 0.05
