--- a/aist_routines/config/pgrp_config.yaml
+++ b/aist_routines/config/pgrp_config.yaml
@@ -20,6 +20,10 @@ cameras:
     type: DepthCamera
     args:
       name: a_bot_camera
+      camera_info_topic: color/camera_info
+      image_topic: color/image_raw
+      pointcloud_topic: depth/color/point
+      depth_topic: aligned_depth_to_color/image_raw
 
 ftsensor:
   a_bot:
