--- a/aist_gazebo/package.xml
+++ b/aist_gazebo/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>aist_gazebo</name>
   <version>0.0.1</version>
   <description>
@@ -15,14 +15,14 @@
   <!-- <url type="website">http://ros.org/wiki/ur_gazebo</url> -->
 
   <buildtool_depend>catkin</buildtool_depend>
-  <run_depend>ur_description</run_depend>
-  <run_depend>gazebo_ros</run_depend>
-  <run_depend>gazebo_ros_control</run_depend>
-  <run_depend>joint_state_controller</run_depend>
-  <run_depend>joint_trajectory_controller</run_depend>
-  <run_depend>effort_controllers</run_depend>
-  <run_depend>robot_state_publisher</run_depend>
-  <run_depend>controller_manager</run_depend>
+  <exec_depend>ur_description</exec_depend>
+  <exec_depend>gazebo_ros</exec_depend>
+  <exec_depend>gazebo_ros_control</exec_depend>
+  <exec_depend>joint_state_controller</exec_depend>
+  <exec_depend>joint_trajectory_controller</exec_depend>
+  <exec_depend>effort_controllers</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>controller_manager</exec_depend>
 
   <export>
     <gazebo_ros gazebo_media_path="${prefix}" />
